--- a/src/components/experience/experienceItem/experience-item.css
+++ b/src/components/experience/experienceItem/experience-item.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     gap: 2rem;
+    width: 100%;
 }
 
 .experience-item:last-child .timeline-tail{
